# AJ_CodingAgent

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml
agents/: __init__.py  base.py  coder.py  debugger.py  planner.py  testing_agent.py  tool_agent.py
core/: complexity.py  config.py  executor.py  guardrails.py  guardrails_runtime.py  json_utils.py  llm.py  models.py  orchestrator.py  prompts.py  tool_executor.py
guardrails/aj_coding_agent/: config.yml
memory/: __init__.py  agent_memory.jsonl  store.py
tests/: test_complexity_guardrails.py  test_main.py  test_nemo_guardrails_runtime.py  test_orchestrator.py  test_testing_agent.py
tools/: __init__.py  dependency_tool.py  executor.py  file_manager.py  file_tool.py  python_tool.py  registry.py  shell_tool.py
