[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aj-coding-agent"
version = "0.1.0"
description = "AJ coding agent: an autonomous multi-agent coding system powered by NVIDIA NIM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.1,<7",
  "requests>=2.32.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9",
]
nemo = [
  "nemoguardrails[nvidia]>=0.20,<0.22",
]

[tool.setuptools.packages.find]
include = ["agents", "core", "memory", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
